<resources>
    <string name="app_name">MusicApp</string>
    <string name="name">MyMusic</string>
    <string name="appname">My Music</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="Logo">Logo</string>
    <string name="Email">Email</string>
    <string name="facebook">Sign Up with Facebook</string>
    <string name="album">album</string>
    <string name="dow">btnDown</string>
    <string name="btnimg">btndown</string>
    <string name="bgr">background</string>
    <string name="fnum">0:01</string>
    <string name="lnum">-5:30</string>
    <string name="froot">Froot</string>
    <string name="marina">Marina and The Diamonds - FROOT</string>
    <string name="song">New Song</string>
    <string name="topsong">Top</string>
    <string name="hello">Acoustic</string>
</resources>
