<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg"
    tools:context="com.example.binh_pc.musicapp.MainActivity">
    <RelativeLayout
        android:padding="10dp"
        android:id="@+id/rtlTop"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/rtlTop"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="@string/Logo"
            android:id="@+id/imgVLogo"
            android:src="@drawable/logo0"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>
        <LinearLayout
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:orientation="vertical"
            android:layout_below="@+id/imgVLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editEmail"
                android:hint="@string/Email"
                android:textColorHint="@android:color/white"
                android:inputType="textEmailAddress"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/editPass"
                android:hint="@string/Password"
                android:textColorHint="@android:color/white"
                android:inputType="textPassword"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnLogin"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:text="@string/Login"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#f53f6d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnFacebookLogin"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:text="@string/facebook"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#3f5df5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
